A few fixes before repackaging.

--- a/options.html
+++ b/options.html
@@ -77,7 +77,7 @@
     </div>
   </div>
   <div id='about'>
-    You probably shouldn't be using this extension. Based on a <a href="https://twitter.com/DAZZLESTORM/status/1044675873247580160" target='_blank'>joke</a> by <a href='https://twitter.com/DAZZLESTORM' target='_blank'>Ellen Degenerate @dazzlestorm</a>. See it on <a href='https://github.com/dzink/Real-Florida-Man' target='_blank'>Github</a>.
+    You probably shouldn't be using this extension. Based on a <a href='https://twitter.com/DAZZLESTORM/status/1044675873247580160' target='_blank'>joke</a> by <a href='https://twitter.com/DAZZLESTORM' target='_blank'>Ellen Degenerate @dazzlestorm</a>. See it on <a href='https://github.com/dzink/Real-Florida-Man' target='_blank'>Github</a>.
   </div>
   <div id='status'>
     <div id='saved'>Options Saved</div>
